@startuml
'https://plantuml.com/class-diagram

hide empty fields
hide empty methods

package "Without DIP" <<Rectangle>> {
    class TaskController {
        -taskService: TaskService
    }

    class TaskService {
        -taskRepository: TaskRepository
    }

    class TaskRepository

    TaskController --> TaskService
    TaskService --> TaskRepository
}

@enduml